# etechs

core/: CLAUDE.md  README.md  compose.yml  pyproject.toml
core/app/: database.py  logging.py  main.py  middleware.py  settings.py
core/app/features/todo/: models.py  repository.py  router.py  service.py
core/tests/: conftest.py  test_main.py  test_todo.py
profile/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  compose.yml  pyproject.toml
profile/app/: main.py
profile/app/core/: config.py  database.py  exceptions.py  health.py  logging.py  mixins.py
profile/app/features/profiles/: __init__.py  model.py  repository.py  router.py  schemas.py  service.py
profile/app/features/todos/: __init__.py  model.py  repository.py  router.py  schemas.py  service.py
profile/app/middleware/: __init__.py  cors.py  request_id.py
profile/tests/: conftest.py
profile/tests/features/: __init__.py
profile/tests/features/profiles/: test_repository.py  test_router.py  test_service.py
profile/tests/features/todos/: __init__.py  test_repository.py  test_router.py  test_service.py
